@@ -88,6 +88,7 @@
 - OpenCL Kernel: Renumbered hash-mode 7600 to 4521
 - OpenCL Kernel: Remove "static" keyword from function declarations; Causes older Intel OpenCL runtimes to fail compiling
 - OpenCL Runtime: Updated AMDGPU-Pro driver version check, do warn if version 16.60 is detected which is known to be broken
+- OpenCL Runtime: Added a warning about using Mesa OpenCL runtime
 - Outfile Check: Fixed a memory leak for failed outfile reads
 - Restore: Add some checks on the rd->cwd variable in restore case
 - Rule Engine: Fixed several memory leaks in case loading of rules failed
